--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,7 @@
     <head>
         <title>Article One : Varun</title>
         <style>
-        .conatianer
+        .conatainer
         {
              max-width=800px;
              margin:0 auto;
@@ -14,7 +14,7 @@
     </head>
     
     <body>
-        <div class="conatiner">
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
