[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,7 @@
     <head>
         <title>Article One : Varun</title>
         <style>
-        .conatainer
+        .container
         {
              max-width=800px;
              margin:0 auto;
