[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,10 +4,11 @@
         <style>
         .container
         {
-             max-width=800px;
-             margin:0 auto;
-             color: grey;
-             font-family: sans-serif;
+            max-width=800px;
+            margin: 0 auto;
+            color: cornflowerblue;
+            font-family: fantasy;
+            padding-top: 60px;
         }
             
         </style>
