--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,17 +1,7 @@
 <html>
     <head>
         <title>Article One : Varun</title>
-        <style>
-        .container
-        {
-            max-width=800px;
-            margin: 0 auto;
-            color: cornflowerblue;
-            font-family: fantasy;
-            padding-top: 60px;
-        }
-            
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     
     <body>
