--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Article One : Varun</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     
