[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,13 +6,21 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://lh3.googleusercontent.com/-KYsM77Ix3_U/AAAAAAAAAAI/AAAAAAAAAAA/xKPsHJ1JM-s/photo.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div class="center text-big bold">
-            Hi! I am Varun and this is my first webapp.
-	    <h4> A new heading </h4>
-		New changes in the file.
+        <h3> Personal </h3>
+        <div>
+            Hi. My name is Varun Panditpautra
+        </div>
+        <hr/>
+        <h3> Professional</h3>
+        <div>
+             I am a student
+        </div>
+        <hr/>
+        <div class="footer">
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
