[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,8 @@
         </div>
         <hr/>
         <div class="footer">
+            This button <button id="counter"> has been clicked <span id="count">0</span>times
+            </button>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
